--- a/package.json
+++ b/package.json
@@ -26,5 +26,8 @@
     "react-dom": "18.2.0",
     "typescript": "4.9.3",
     "yup": "^0.32.11"
+  },
+  "devDependencies": {
+    "react-query": "^3.39.2"
   }
 }
