--- a/package.json
+++ b/package.json
@@ -23,12 +23,14 @@
     "framer-motion": "^6.5.1",
     "next": "13.0.4",
     "react": "18.2.0",
+    "react-datepicker": "^4.8.0",
     "react-daum-postcode": "^3.1.1",
     "react-dom": "18.2.0",
     "typescript": "4.9.3",
     "yup": "^0.32.11"
   },
   "devDependencies": {
+    "@types/react-datepicker": "^4.8.0",
     "react-query": "^3.39.2"
   }
 }
